fuzzbugs api added
