# api/openapi.yml
@@ -27,6 +27,24 @@ paths:
                 $ref: '#/components/schemas/RestErrResponse'
           description: Bad Request
       summary: Echo
+  /fuzzBugs:
+    get:
+      description: Returns the list of all the Fuzz Bugs
+      operationId: endpoints.GetFuzzesBug
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/EndpointsGetFuzzBugsOutput'
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestErrResponse'
+          description: Bad Request
+      summary: Get Fuzz Bugs
   /login:
     get:
       description: Return token
@@ -99,6 +117,29 @@ components:
           type: string
       required:
       - result
+      type: object
+    EndpointsFuzzb:
+      properties:
+        EndPoints:
+          type: string
+        errorType:
+          type: string
+        title:
+          type: string
+      required:
+      - EndPoints
+      - errorType
+      - title
+      type: object
+    EndpointsGetFuzzBugsOutput:
+      properties:
+        fuzzes:
+          items:
+            $ref: '#/components/schemas/EndpointsFuzzb'
+          nullable: true
+          type: array
+      required:
+      - fuzzes
       type: object
     EndpointsPostEchoInput:
       properties:
