# internal/endpoints/fuzzbugs.go
@@ -1,0 +1,44 @@
+package endpoints
+
+import (
+	"context"
+	"dyno/internal/logger"
+
+	"github.com/swaggest/rest/web"
+	"github.com/swaggest/usecase"
+	"github.com/swaggest/usecase/status"
+)
+
+type GetFuzzBugsInput struct {
+	Request string `json:"request"`
+}
+
+type GetFuzzBugsOutput struct {
+	Fuzzes []Fuzzb `json:"fuzzes"`
+}
+
+type Fuzzb struct {
+	Title     string `json:"title"`
+	ErrorType string `json:"errorType"`
+	EndPoints string `json:"EndPoints"`
+}
+
+func GetFuzzesBug(service *web.Service) {
+	handler := func(ctx context.Context, input, output interface{}) error {
+		var in = input.(*GetFuzzBugsInput)
+		var out = output.(*GetFuzzBugsOutput)
+
+		logger.Infof("Received echo request: %s", in.Request)
+		out.Fuzzes = []Fuzzb{}
+
+		return nil
+	}
+
+	u := usecase.NewIOI(new(GetFuzzBugsInput), new(GetFuzzBugsOutput), handler)
+
+	u.SetTitle("Get Fuzz Bugs")
+	u.SetDescription("Returns the list of all the Fuzz Bugs")
+	u.SetExpectedErrors(status.InvalidArgument)
+
+	service.Get("/fuzzBugs", u)
+}
